[package]
name = "cua-bridge"
version = "0.1.0"
edition = "2021"
description = "Native Rust MCP bridge for cua-driver — replaces supergateway"
repository = "https://github.com/chxrro/cua-bridge"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
parking_lot = "0.12"
async-stream = "0.3"
futures = "0.3"
